[package]
name = "twenty_six_protons"
version = "0.0.1"
authors = ["mike mcgirr <mike@oatsmail.com>"]
description = " "
repository = "https://github.com/michaelmcgirr/26protons"
license = "MIT"
readme = "README.md"

[dependencies] 
iron = "*"
mount = "*"
time = "*"
router = "*"
log = "*"
staticfile = "*"
